--- a/iccp-milktea/iccp-milktea-pojo/pom.xml
+++ b/iccp-milktea/iccp-milktea-pojo/pom.xml
@@ -11,5 +11,22 @@
 
     <artifactId>iccp-milktea-pojo</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
