1、修改common maven-source-plugin依赖版本 2、添加与数据库对应八张表的一系列方法 3、代码生成器修改

--- a/iccp-milktea-rest/src/main/resources/application.properties
+++ b/iccp-milktea-rest/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=9001
+server.servlet.context-path=/iccp-milktea-rest
+spring.jmx.default-domain=iccp-milktea-rest
 
 pagehelper.helper-dialect=mysql
 pagehelper.reasonable=true
