--- a/iccp-milktea/iccp-milktea-pojo/pom.xml
+++ b/iccp-milktea/iccp-milktea-pojo/pom.xml
@@ -34,6 +34,10 @@
             <groupId>com.wuwenze</groupId>
             <artifactId>ExcelKit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
