管理员表添加role和avatar字段，增加图片上传功能，增加FTP、ID工具类

--- a/iccp-milktea-rest/src/main/resources/application.properties
+++ b/iccp-milktea-rest/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=9001
+server.port=9000
 server.servlet.context-path=/iccp-milktea-rest
 spring.jmx.default-domain=iccp-milktea-rest
 
@@ -6,6 +6,15 @@ pagehelper.helper-dialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
+
+ftp.host=127.0.0.1
+ftp.port=21
+ftp.username=milktea
+ftp.password=123456
+ftp.basepath=/spring-cloud-milktea
+
+nginx.path=http://127.0.0.1:5000
+temp.filePath=F:\\github\\image\\
 
 #spring.redis.host=127.0.0.1
 #spring.redis.port=6379
