框架结构修改

--- a/iccp-milktea-rest/src/main/resources/application.properties
+++ b/iccp-milktea-rest/src/main/resources/application.properties
@@ -7,6 +7,9 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 
+token.key=DKfBOcdEoRMxcPOi
+token.iv=2019120120200630
+
 ftp.host=127.0.0.1
 ftp.port=21
 ftp.username=milktea
