重构数据库、方法等！！！ 大改！

--- a/iccp-milktea-rest/src/main/resources/application.properties
+++ b/iccp-milktea-rest/src/main/resources/application.properties
@@ -13,17 +13,17 @@ token.iv=2019120120200630
 ftp.host=127.0.0.1
 ftp.port=21
 ftp.username=milktea
-ftp.password=123456
+ftp.password=mMnDzq9
 ftp.basepath=/spring-cloud-milktea
 
 nginx.path=http://127.0.0.1:5000
 temp.filePath=F:\\github\\image\\
 
-#spring.redis.host=127.0.0.1
-#spring.redis.port=6379
-#
-#spring.cache.type=redis
-#spring.cache.cache-names=redisCache
-#spring.cache.redis.use-key-prefix=true
-#spring.cache.redis.cache-null-values=false
-#spring.cache.redis.time-to-live=100s
+spring.cache.type=redis
+spring.cache.cache-names=redisCache
+spring.cache.redis.use-key-prefix=true
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.time-to-live=100s
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
